# android_distinguish_image_light

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gloomyer/lightdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/gloomyer/lightdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gloomyer/lightdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
